--- a/general/sections/0_officers.html
+++ b/general/sections/0_officers.html
@@ -13,16 +13,16 @@ Treasurer | <a href="https://www.um.edu.mt/profile/claudiaborg">Claudia Borg</a>
 Past Treasurer | <a href="https://www.um.edu.mt/profile/mikerosner">Mike Rosner</a> | University of Malta |	
 Chair-elect | <a href="http://cs.haifa.ac.il/~shuly">Shuly Wintner</a> | University of Haifa, Israel |
 Advisory Board ^ rowspan="4" valign="top" | <a href="http://angelikilazaridou.github.io/">Angeliki Lazaridou</a> | DeepMind, Uk |
-| <a href="https://bplank.github.io/">Barbara Plank</a> | IT University of Copenhagen, Denmark |
-| <a href="https://www.qcri.org/our-people/bio?pid=35&par=acc&name=PreslavNakov/">Preslav Nakov</a> | QCRI, Qatar |
-| <a href="http://ivan-titov.org/">Ivan Titov</a> | University of Edinburgh, UK |
+<a href="https://bplank.github.io/">Barbara Plank</a> | IT University of Copenhagen, Denmark |
+<a href="https://www.qcri.org/our-people/bio?pid=35&par=acc&name=PreslavNakov/">Preslav Nakov</a> | QCRI, Qatar |
+<a href="http://ivan-titov.org/">Ivan Titov</a> | University of Edinburgh, UK |
 Nominating Committee  ^ rowspan="4" valign="top" | <a href="https://www.clips.uantwerpen.be/~walter/">Walter Daelemans</a> | University of Antwerp, Belgium |
-| <a href="https://www.informatik.tu-darmstadt.de/ukp/ukp_home/staff_ukp/prof_dr_iryna_gurevych/index.en.jsp">Iryna Gurevych</a> | Technische Universität Darmstadt, Germany |
-| <a href="">Lluís Màrquez</a> | Amazon |
-| <a href="http://www.gcdh.de/en/people/team/caroline-sporleder">Caroline Sporleder</a> | GCDH, Göttingen |
+<a href="https://www.informatik.tu-darmstadt.de/ukp/ukp_home/staff_ukp/prof_dr_iryna_gurevych/index.en.jsp">Iryna Gurevych</a> | Technische Universität Darmstadt, Germany |
+<a href="">Lluís Màrquez</a> | Amazon |
+<a href="http://www.gcdh.de/en/people/team/caroline-sporleder">Caroline Sporleder</a> | GCDH, Göttingen |
 Student Board  ^ rowspan="3" valign="top" | <a href="https://feralvam.github.io/">Fernando Alva-Manchego</a> | University of Sheffield, UK |
-| <a href="http://www.uva.nl/en/profile/s/c/m.s.schlichtkrull/m.s.schlichtkrull.html/">Michael Schlichtkrull</a> | University of Amsterdam, The Netherlands |
-| <a href="https://madhumitasushil.github.io/">Madhumita Sushil</a> | University of Antwerp, Belgium |
+<a href="http://www.uva.nl/en/profile/s/c/m.s.schlichtkrull/m.s.schlichtkrull.html/">Michael Schlichtkrull</a> | University of Amsterdam, The Netherlands |
+<a href="https://madhumitasushil.github.io/">Madhumita Sushil</a> | University of Antwerp, Belgium |
 {% endcapture %}
 
 {% include michael_table.html headers=headers data=data separator="|" %}
