update eacl 2021 and current officers

--- a/conferences/sections/0_previous.html
+++ b/conferences/sections/0_previous.html
@@ -8,6 +8,7 @@ reference: previous
 
 {% capture data %}
 
+<a href=http://www.acl2019.org/EN/index.xhtml>ACL 2019</a> | Florence, Italy
 <a href="http://www.eacl2017.org">EACL 2017</a>  | Valencia, Spain
 <a href="http://www.eacl2014.org">EACL 2014</a> | Gothenburg, Sweden
 <a href="http://aclweb.org/mirror/eacl2012/">EACL 2012</a> | Avignon, France
