--- a/conferences/sections/0_upcoming.html
+++ b/conferences/sections/0_upcoming.html
@@ -7,8 +7,7 @@ reference: upcoming
 {% assign headers = "Conference | Location" %}
 
 {% capture data %}
-<a href=http://www.acl2019.org/EN/index.xhtml>ACL 2019</a> | Florence, Italy
-EACL 2021 | To be decided
+<a href=https://2021.eacl.org/>EACL 2021</a> | Kyiv, Ukraine (held online)
 
 {% endcapture %}
 
