--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 		</header>
 		<p>The European Chapter of the ACL (EACL) is the primary professional association for computational linguistics in Europe. It provides a number of services to its members and the community.</p>
 		<hr />
-		
+
 		<div class="row">
 			<section class="4u">
 				<div class="featured-item">
@@ -29,15 +29,15 @@ layout: default
 			<section class="4u">
 				<div class="featured-item">
 				<div class="featured-item-pennant">
-					<a href="http://www.acl2019.org/EN/index.xhtml">
+					<a href="https://2021.eacl.org/">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
 						<h3 class="featured-item-header">ACL 2019</h3>
 					</a>
 				</div>
 				<div class="featured-item-text">
-					<p>The 57th Annual Meeting of the Association for Computational Linguistics (ACL) will take place in Florence (Italy) at the 'Fortezza da Basso' from July 28th to August 2nd, 2019.</p>
+					<p>The 16th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place online due to COVID-19 in place of Kyiv (Ukraine) from April 19th to 23rd, 2021.</p>
 				</div>
-				<a href="http://www.acl2019.org/EN/index.xhtml" class="button button-style1">Read More</a>
+				<a href="https://2021.eacl.org/" class="button button-style1">Read More</a>
 				</div>
 			</section>
 			<section class="4u">
