update highlight text

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ layout: default
 				<div class="featured-item-pennant">
 					<a href="https://2021.eacl.org/">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
-						<h3 class="featured-item-header">ACL 2019</h3>
+						<h3 class="featured-item-header">EACL 2021</h3>
 					</a>
 				</div>
 				<div class="featured-item-text">
-					<p>The 16th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place online due to COVID-19 in place of Kyiv (Ukraine) from April 19th to 23rd, 2021.</p>
+					<p>The 16th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place online from April 19th to 23rd, 2021.</p>
 				</div>
 				<a href="https://2021.eacl.org/" class="button button-style1">Read More</a>
 				</div>
