--- a/general/sections/0_officers.html
+++ b/general/sections/0_officers.html
@@ -10,7 +10,6 @@ reference: officers
 Chair| <a href="http://cs.haifa.ac.il/~shuly/">Shuly Wintner</a> | University of Haifa, Israel | <a href="mailto:eacl-chair@aclweb.org">eacl-chair@aclweb.org</a> |
 Secretary | <a href="http://georg-re.hm">Georg Rehm</a> | DFKI, Germany | <a href="mailto:eacl-secretary@aclweb.org">eacl-secretary@aclweb.org</a> |
 Treasurer | <a href="https://www.um.edu.mt/profile/claudiaborg">Claudia Borg</a> | University of Malta | <a href="mailto:eacl-treasurer@aclweb.org">eacl-treasurer@aclweb.org</a> |
-Past Treasurer | <a href="https://www.um.edu.mt/profile/mikerosner">Mike Rosner</a> | University of Malta |
 Chair-elect | <a href="http://art.uniroma2.it/basili/">Roberto Basili</a> | University of Roma, Tor Vergata, Italy |
 Advisory Board ^ rowspan="4" valign="top" | <a href="http://angelikilazaridou.github.io/">Angeliki Lazaridou</a> | DeepMind, UK |
 <a href="https://bplank.github.io/">Barbara Plank</a> | IT University of Copenhagen, Denmark |
@@ -20,8 +19,8 @@ Nominating Committee  ^ rowspan="4" valign="top" | <a href="https://www.clips.ua
 <a href="https://www.informatik.tu-darmstadt.de/ukp/ukp_home/staff_ukp/prof_dr_iryna_gurevych/index.en.jsp">Iryna Gurevych</a> | Technische Universität Darmstadt, Germany |
 <a href="https://homepages.inf.ed.ac.uk/sgwater/">Sharon Goldwater</a> | University of Edinburgh, UK |
 <a href="http://staffwww.dcs.shef.ac.uk/people/L.Specia/">Lucia Specia</a> | Imperial College and University of Sheffield, UK |
-Student Board  ^ rowspan="3" valign="top" | <a href="https://sorodoc.github.io/">Ionut-Teodor Sorodoc</a> | Pompeu Fabra University, Spain
-<a href="https://ecekt.github.io/">Ece Takmaz</a> | University of Amsterdam, The Netherlands
+Student Board  ^ rowspan="3" valign="top" | <a href="https://elisabassignana.github.io">Elisa Bassignana</a> | IT University of Copenhagen, Denmark
+<a href="https://namednil.github.io">Matthias Lindemann</a> | University of Edinburgh, UK
 <a href="https://alban-petit.github.io/">Alban Petit</a> | Interdisciplinary Computer Science Laboratory (LISN), CNRS, France
 {% endcapture %}
 
