--- a/conferences/sections/0_previous.html
+++ b/conferences/sections/0_previous.html
@@ -7,10 +7,13 @@ reference: previous
 {% assign headers = "Conference | Location" %}
 
 {% capture data %}
-
+<a href="https://www.2022.aclweb.org/">ACL 2022</a> | Dublin, Ireland
+<a href=https://2021.eacl.org/>EACL 2021</a> | Kyiv, Ukraine (held online)
 <a href=http://www.acl2019.org/EN/index.xhtml>ACL 2019</a> | Florence, Italy
-<a href="http://www.eacl2017.org">EACL 2017</a>  | Valencia, Spain
-<a href="http://www.eacl2014.org">EACL 2014</a> | Gothenburg, Sweden
+<!-- <a href="http://www.eacl2017.org">EACL 2017</a> | Valencia, Spain
+<a href="http://www.eacl2014.org">EACL 2014</a> | Gothenburg, Sweden -->
+EACL 2017 | Valencia, Spain
+EACL 2014 | Gothenburg, Sweden
 <a href="http://aclweb.org/mirror/eacl2012/">EACL 2012</a> | Avignon, France
 EACL 2009 | Athens, Greece
 <a href="http://eacl06.fbk.eu/index.htm">EACL 2006</a> | Trento, Italy
