--- a/general/sections/welcome.html
+++ b/general/sections/welcome.html
@@ -7,10 +7,10 @@ reference: welcome
 
 <p>
 
-The European Chapter of the ACL (EACL) is the primary professional association for computational linguistics in Europe. It provides a number of services to its members and the community:
+The European Chapter of the <a href="https://www.aclweb.org/">ACL</a> (EACL) is the primary professional association for computational linguistics in Europe. It provides a number of services to its members and the community:
 
 <ul>
-     <li/> The conference. <a href="https://2021.eacl.org/">EACL 2021</a> is going to be held completely online due to COVID-19 (instead of Kyiv) from 19th to 23rd April 2021. From now onwards, the EACL conference will be organized yearly, except in years when ACL is in Europe, which happens every third year.
+     <li/> The conference. <a href="https://2021.eacl.org/">EACL 2023</a> will take place in hybrid mode in spring 2023; the official location remains Kyiv, Ukraine, where the conference was initially planned to happen.
      <li/> Support for educational initiatives in the field -- for example, EACL-sponsored courses at ESSLLI summer  schools and student grants for selected Computational Linguistics events.
 </ul>
 
