--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@ layout: default
 			<section class="4u">
 				<div class="featured-item">
 				<div class="featured-item-pennant">
-					<a href="https://2021.eacl.org/">
+					<a href="https://2023.eacl.org/">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
-						<h3 class="featured-item-header">EACL 2021</h3>
+						<h3 class="featured-item-header">EACL 2023</h3>
 					</a>
 				</div>
 				<div class="featured-item-text">
-					<p>The 16th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place online from April 19th to 23rd, 2021.</p>
+					<p>The 17th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place in hybrid mode in spring 2023; the official location remains Kyiv, Ukraine, where the conference was initially planned to happen.</p>
 				</div>
-				<a href="https://2021.eacl.org/" class="button button-style1">Read More</a>
+				<a href="https://2023.eacl.org/" class="button button-style1">Read More</a>
 				</div>
 			</section>
 			<section class="4u">
