--- a/conferences/sections/0_upcoming.html
+++ b/conferences/sections/0_upcoming.html
@@ -7,7 +7,7 @@ reference: upcoming
 {% assign headers = "Conference | Location" %}
 
 {% capture data %}
-<a href="https://2023.eacl.org">EACL 2023</a> | Kyiv, Ukraine (hybrid)
+<a href="https://2023.eacl.org">EACL 2023</a> | Dubrovnik, Croatia (hybrid)
 
 {% endcapture %}
 
