--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ layout: default
 					</a>
 				</div>
 				<div class="featured-item-text">
-					<p>The 17th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place in hybrid mode in spring 2023; the official location remains Kyiv, Ukraine, where the conference was initially planned to happen.</p>
+					<!-- <p>The 17th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place in hybrid mode in spring 2023; the official location remains Kyiv, Ukraine, where the conference was initially planned to happen.</p> -->
+					<p>The 17th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place in hybrid mode in spring 2023 in Dubrovnik, Croatia.</p>
 				</div>
 				<a href="https://2023.eacl.org/" class="button button-style1">Read More</a>
 				</div>
