--- a/general/sections/0_officers.html
+++ b/general/sections/0_officers.html
@@ -7,18 +7,18 @@ reference: officers
 {% assign headers = "Position | Officers | Affiliation | Contact" %}
 
 {% capture data %}
-Chair| <a href="http://cs.haifa.ac.il/~shuly/">Shuly Wintner</a> | University of Haifa, Israel | <a href="mailto:eacl-chair@aclweb.org">eacl-chair@aclweb.org</a> |
+Chair| <a href="http://art.uniroma2.it/basili/">Roberto Basili</a> | University of Roma, Tor Vergata, Italy | <a href="mailto:eacl-chair@aclweb.org">eacl-chair@aclweb.org</a> |
 Secretary | <a href="http://georg-re.hm">Georg Rehm</a> | DFKI, Germany | <a href="mailto:eacl-secretary@aclweb.org">eacl-secretary@aclweb.org</a> |
 Treasurer | <a href="https://www.um.edu.mt/profile/claudiaborg">Claudia Borg</a> | University of Malta | <a href="mailto:eacl-treasurer@aclweb.org">eacl-treasurer@aclweb.org</a> |
-Chair-elect | <a href="http://art.uniroma2.it/basili/">Roberto Basili</a> | University of Roma, Tor Vergata, Italy |
-Advisory Board ^ rowspan="4" valign="top" | <a href="http://angelikilazaridou.github.io/">Angeliki Lazaridou</a> | DeepMind, UK |
-<a href="https://bplank.github.io/">Barbara Plank</a> | IT University of Copenhagen, Denmark |
-<a href="https://www.qcri.org/our-people/bio?pid=35&par=acc&name=PreslavNakov/">Preslav Nakov</a> | QCRI, Qatar |
-<a href="https://perso.limsi.fr/yvon/mysite/mysite.php">François Yvon</a> | Interdisciplinary Computer Science Laboratory (LISN), CNRS, France |
-Nominating Committee  ^ rowspan="4" valign="top" | <a href="https://www.clips.uantwerpen.be/~walter/">Walter Daelemans</a> | University of Antwerp, Belgium |
-<a href="https://www.informatik.tu-darmstadt.de/ukp/ukp_home/staff_ukp/prof_dr_iryna_gurevych/index.en.jsp">Iryna Gurevych</a> | Technische Universität Darmstadt, Germany |
-<a href="https://homepages.inf.ed.ac.uk/sgwater/">Sharon Goldwater</a> | University of Edinburgh, UK |
+Chair-elect | <a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov">Preslav Nakov</a> | QCRI, Qatar |
+Advisory Board ^ rowspan="4" valign="top" | <a href="https://u.cs.biu.ac.il/~yogo/">Yoav Goldberg</a> | Bar Ilan University, Israel |
+<a href="https://research.flw.ugent.be/en/veronique.hoste">Véronique Hoste</a> | Ghent University, Belgium |
+<a href="https://fyvo.github.io">François Yvon</a> | Interdisciplinary Computer Science Laboratory (LISN), CNRS, France |
+<a href="https://sadilar.org/index.php/en/9-about/109-dh-prof">Menno van Zaanen</a> | North-West University, South Africa |
+Nominating Committee  ^ rowspan="4" valign="top" | <a href="https://homepages.inf.ed.ac.uk/sgwater/">Sharon Goldwater</a> | University of Edinburgh, UK |
+<a href="https://www.cis.uni-muenchen.de/personen/professoren/bplank/index.html">Barbara Plank</a> | LMU Munich, Germany and IT University of Copenhagen, Denmark |
 <a href="http://staffwww.dcs.shef.ac.uk/people/L.Specia/">Lucia Specia</a> | Imperial College and University of Sheffield, UK |
+<a href="http://cs.haifa.ac.il/~shuly/">Shuly Wintner</a> | University of Haifa, Israel |
 Student Board  ^ rowspan="3" valign="top" | <a href="https://elisabassignana.github.io">Elisa Bassignana</a> | IT University of Copenhagen, Denmark
 <a href="https://namednil.github.io">Matthias Lindemann</a> | University of Edinburgh, UK
 <a href="https://alban-petit.github.io/">Alban Petit</a> | Interdisciplinary Computer Science Laboratory (LISN), CNRS, France
