Updated homepage and conference for EACL 2024

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ layout: default
 				<div class="featured-item-pennant">
 					<a href="https://2023.eacl.org/">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
-						<h3 class="featured-item-header">EACL 2023</h3>
+						<h3 class="featured-item-header">EACL 2024</h3>
 					</a>
 				</div>
 				<div class="featured-item-text">
 					<!-- <p>The 17th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place in hybrid mode in spring 2023; the official location remains Kyiv, Ukraine, where the conference was initially planned to happen.</p> -->
-					<p>The 17th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place in hybrid mode in spring 2023 in Dubrovnik, Croatia.</p>
+					<p>The 18th Annual Meeting of the European chapter of the Association for Computational Linguistics (EACL) will take place in March 2024 in St. Julians, Malta.</p>
 				</div>
-				<a href="https://2023.eacl.org/" class="button button-style1">Read More</a>
+				<a href="https://2024.eacl.org/" class="button button-style1">Read More</a>
 				</div>
 			</section>
 			<section class="4u">
