--- a/conferences/sections/0_previous.html
+++ b/conferences/sections/0_previous.html
@@ -7,6 +7,7 @@ reference: previous
 {% assign headers = "Conference | Location" %}
 
 {% capture data %}
+<a href="https://2023.eacl.org">EACL 2023</a> | Dubrovnik, Croatia (hybrid)
 <a href="https://www.2022.aclweb.org/">ACL 2022</a> | Dublin, Ireland
 <a href=https://2021.eacl.org/>EACL 2021</a> | Kyiv, Ukraine (held online)
 <a href=http://www.acl2019.org/EN/index.xhtml>ACL 2019</a> | Florence, Italy
