--- a/conferences/sections/0_upcoming.html
+++ b/conferences/sections/0_upcoming.html
@@ -7,7 +7,7 @@ reference: upcoming
 {% assign headers = "Conference | Location" %}
 
 {% capture data %}
-<a href="https://2024.eacl.org">EACL 2024</a> | St. Julians, Malta (hybrid)
+<a href="https://2024.eacl.org">EACL 2024</a> | St. Julians, Malta
 
 {% endcapture %}
 
