--- a/general/sections/0_officers.html
+++ b/general/sections/0_officers.html
@@ -10,7 +10,7 @@ reference: officers
 Chair| <a href="http://art.uniroma2.it/basili/">Roberto Basili</a> | University of Roma, Tor Vergata, Italy | <a href="mailto:eacl-chair@aclweb.org">eacl-chair@aclweb.org</a> |
 Secretary | <a href="http://georg-re.hm">Georg Rehm</a> | DFKI, Germany | <a href="mailto:eacl-secretary@aclweb.org">eacl-secretary@aclweb.org</a> |
 Treasurer | <a href="https://www.um.edu.mt/profile/claudiaborg">Claudia Borg</a> | University of Malta | <a href="mailto:eacl-treasurer@aclweb.org">eacl-treasurer@aclweb.org</a> |
-Chair-elect | <a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov">Preslav Nakov</a> | QCRI, Qatar |
+Chair-elect | <a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov">Preslav Nakov</a> | MBZUAI, UAE |
 Advisory Board ^ rowspan="4" valign="top" | <a href="https://u.cs.biu.ac.il/~yogo/">Yoav Goldberg</a> | Bar Ilan University, Israel |
 <a href="https://research.flw.ugent.be/en/veronique.hoste">Véronique Hoste</a> | Ghent University, Belgium |
 <a href="https://fyvo.github.io">François Yvon</a> | Interdisciplinary Computer Science Laboratory (LISN), CNRS, France |
