--- a/general/sections/0_officers.html
+++ b/general/sections/0_officers.html
@@ -13,7 +13,7 @@ Treasurer | <a href="https://www.um.edu.mt/profile/claudiaborg">Claudia Borg</a>
 Chair-elect | <a href="https://mbzuai.ac.ae/study/faculty/preslav-nakov">Preslav Nakov</a> | MBZUAI, UAE |
 Advisory Board ^ rowspan="4" valign="top" | <a href="https://u.cs.biu.ac.il/~yogo/">Yoav Goldberg</a> | Bar Ilan University, Israel |
 <a href="https://research.flw.ugent.be/en/veronique.hoste">Véronique Hoste</a> | Ghent University, Belgium |
-<a href="https://fyvo.github.io">François Yvon</a> | Interdisciplinary Computer Science Laboratory (LISN), CNRS, France |
+<a href="https://fyvo.github.io">François Yvon</a> | Institute of Intelligent Systems and Robotics (ISIR), CNRS, France |
 <a href="https://sadilar.org/index.php/en/9-about/109-dh-prof">Menno van Zaanen</a> | North-West University, South Africa |
 Nominating Committee  ^ rowspan="4" valign="top" | <a href="https://homepages.inf.ed.ac.uk/sgwater/">Sharon Goldwater</a> | University of Edinburgh, UK |
 <a href="https://www.cis.uni-muenchen.de/personen/professoren/bplank/index.html">Barbara Plank</a> | LMU Munich, Germany and IT University of Copenhagen, Denmark |
